# esp-wiffy

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.cargo/: config.toml
.devenv/: profile
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 03w6k40619khim2zyw159qzmi22s3km5-source  0lc8qlz9j0dfbwc93b0rlfd7vcsajwlp-source  74qvbv1vi1a50wqq2r9fi7zfhndx9scc-source  xwxf09s0s1a6mwgcjj18gg617v0n9v6j-source  ydppc8lxxagds2lqk3bzb19s66prv5w9-source
secrets/: mqtt_pass.age  mqtt_user.age  secret.txt.age  ssid.age  wiffy.age
src/: dht.rs  main.rs
