[package]
name = "esp-wiffy"
version = "0.1.0"
authors = ["Alex Nordin <alex_m_nordin@pm.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true
opt-level = 3

[dependencies]
# esp32c3-hal = "0.15.0"
hal = { package = "esp32c3-hal", version = "0.15.0", features = ["embassy", "async", "embassy-executor-thread", "embassy-time-timg0"] }
esp-wifi = { version = "0.3.0", features = ["esp32c3", "async", "embassy-net", "wifi", "ipv4", "tcp"] }
embedded-svc = { version = "0.27.0", default-features = false}
embassy-time       = { version = "0.3.0" }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
] }
embassy-net = { version = "0.4.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv6", "log", "dns"] }
esp-backtrace = { version = "0.11.0", features = ["esp32c3", "panic-handler", "exception-handler", "println"] }
esp-println = { version = "0.9.0", features = ["esp32c3"] }
static_cell = { version = "2.0", features = ["nightly"] }
heapless = "0.8.0"
rust-mqtt = {version = "0.3.0", default-features = false}
embassy-sync = "0.5.0"
dht-sensor = "0.2.1"
# anyhow = {version ="1.0.80", default-features = false}
